exercises/module-10/ingress.yaml
# create a k8s ingress for the httpserver
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - httpserver.com
    secretName: httpserver-tls
  rules:
  - host: httpserver.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpserver-service
            port: 
              number: 8080
